Fjerner duplisert kode i felles, bumper felles, skriver tester for søknadsmapper + rydding/sonar