@@ -2,8 +2,7 @@ package no.nav.foreldrepenger.selvbetjening.error;
 
 import static com.fasterxml.jackson.annotation.JsonFormat.Feature.WRITE_SINGLE_ELEM_ARRAYS_UNWRAPPED;
 import static com.fasterxml.jackson.annotation.JsonFormat.Shape.STRING;
-import static java.util.stream.Collectors.toList;
-import static no.nav.foreldrepenger.selvbetjening.util.MDCUtil.callId;
+import static no.nav.foreldrepenger.common.util.MDCUtil.callId;
 import static org.springframework.core.NestedExceptionUtils.getMostSpecificCause;
 
 import java.time.LocalDateTime;
@@ -60,7 +59,7 @@ class ApiError {
         return messages.stream()
                 .filter(Objects::nonNull)
                 .map(Object::toString)
-                .collect(toList());
+                .toList();
     }
 
     @Override
